# adk-template

./: .gitignore  README.md  devserver.sh  pyproject.toml
.idx/: dev.nix
agents/my_first_agent/: agent.py  sample.env
